--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -5,7 +5,10 @@
         <img [ngStyle]="{'right.px': i *5}" *ngFor="let c of [0,1,2,3,4,]; let i = index;" src="../../assets/img/cards/card_cover.png" alt="">
 
         <!-- Die oberste Karte soll animiert werden somit muss sie extra liegen -->
-        <img (click)="takeCard()" [class.pick-card]="pickCardAnimation" class="top-card" style="right:25px" src="../../assets/img/cards/card_cover.png" alt="">
+        <img (click)="takeCard()" class="top-card" style="right:25px" src="../../assets/img/cards/card_cover.png" alt="">
+
+        <!-- Die oberste Karte aber sie wird umgedreht und zeigt das Bild -->
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class=" pick-card" style="right:25px" src="../../assets/img/cards/ace_1.png" alt="">
 
     </div>
 </div>
