--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -25,6 +25,21 @@
 }
 
 .pick-card {
-    transition: all 125ms ease-in-out;
-    transform: scale(1.5) !important;
+    animation: pick-card-animation 1s ease-in-out;
+    transform: scale(1.3) translateX(120px) translateY(-180px)rotate(-10deg);
+}
+
+@keyframes pick-card-animation {
+    0% {
+        transform: scale(1);
+    }
+    30% {
+        transform: scale(1.5);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1.3) translateX(120px) translateY(-180px) rotate(-10deg);
+    }
 }
