--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,14 +1,27 @@
+<app-player *ngFor="let player of game.players; let i = index " style="top: 130px" class="player-position" [ngStyle]="{'top.px': 100+(i*120)}" [name]="player">
+</app-player>
+
+
 <div class="field">
 
     <div class="card-stack">
-        <!-- for-schleife in Angular für HTML code. 6 Karten werden angezeigt mit einerversetzung von jeweils 5px (1*5) -->
+        <!-- Card stack (for-schleife in Angular für HTML code. 6 Karten werden angezeigt mit einerversetzung von jeweils 5px (1*5)) -->
         <img [ngStyle]="{'right.px': i *5}" *ngFor="let c of [0,1,2,3,4,]; let i = index;" src="../../assets/img/cards/card_cover.png" alt="">
 
         <!-- Die oberste Karte soll animiert werden somit muss sie extra liegen -->
         <img (click)="takeCard()" class="top-card" style="right:25px" src="../../assets/img/cards/card_cover.png" alt="">
 
-        <!-- Die oberste Karte aber sie wird umgedreht und zeigt das Bild -->
-        <img (click)="takeCard()" *ngIf="pickCardAnimation" class=" pick-card" style="right:25px" src="../../assets/img/cards/ace_1.png" alt="">
+        <!-- Stack for played cards -->
+        <img *ngFor="let card of game.playedCards" class="played-card" src="../../assets/img/cards/{{ card }}.png" alt="">
+
+        <!-- Current card animation -->
+        <img (click)="takeCard()" *ngIf="pickCardAnimation" class=" pick-card" style="right:25px" src="../../assets/img/cards/{{ game.currentCard }}.png" alt="">
+
+
 
     </div>
 </div>
+
+<button mat-fab color="primary" class="button-add" (click)="openDialog()">
+    <mat-icon>add</mat-icon>
+  </button>
