--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+<app-game-info [card]="game.currentCard" class="pin-bottom"></app-game-info>
 
 <button mat-fab color="primary" class="button-add" (click)="openDialog()">
     <mat-icon>add</mat-icon>
