--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -52,6 +52,7 @@
 .player-position {
     position: absolute;
     right: 0;
+    z-index: 1;
 }
 
 .button-add {
@@ -64,5 +65,23 @@
     position: absolute;
     bottom: 32px;
     left: 100px;
-    right: 100px
+    right: 100px;
+    @media (max-width: 720px) {
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+}
+
+.scroll-container {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    display: flex;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    app-player-mobile {
+        margin-left: 8px;
+    }
 }
