added edit-player funktion

--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,4 @@
 <div class="player" [class.player-active]="playerActive">
-    <img src="../../assets/img/profile-pictures/avatar-g2a332f472_1280.png" alt="">
+    <img src="../../assets/img/profile-pictures/{{ image }}" alt="">
     <span>{{name}}</span>
 </div>
