--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,7 @@
-<app-player *ngFor="let player of game.players; let i = index " style="top: 130px" class="player-position hide-mobile" [ngStyle]="{'top.px': 100+(i*90)}" [playerActive]="i ==  game.currentPlayer" [name]="player">
+<app-player (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index " style="top: 130px" class="player-position hide-mobile" [ngStyle]="{'top.px': 100+(i*90)}" [playerActive]="i ==  game.currentPlayer" [name]="player" [image]="game.player_images[i]">
 </app-player>
 <div class="scroll-container hide-desktop">
-    <app-player-mobile *ngFor="let player of game.players; let i = index " style="top: 130px" [ngStyle]="{'left.px': 10+(i*90), 'top.px':0}" [playerActive]="i ==  game.currentPlayer" [name]="player">
+    <app-player-mobile (click)="editPlayer(i)" *ngFor="let player of game.players; let i = index " style="top: 130px" [ngStyle]="{'left.px': 10+(i*90), 'top.px':0}" [playerActive]="i ==  game.currentPlayer" [name]="player" [image]="game.player_images[i]">
     </app-player-mobile>
 </div>
 
