--- a/src/app/edit-player/edit-player.component.html
+++ b/src/app/edit-player/edit-player.component.html
@@ -1,1 +1,8 @@
+<h2>Edit Player</h2>
+
 <img [mat-dialog-close]="picture" class="profile-picture" *ngFor="let picture of allProfilePictures" src="../../assets/img/profile-pictures/{{ picture }}">
+
+<div mat-dialog-actions>
+    <button mat-button (click)="onNoClick()">Close</button>
+    <button mat-button color="warn" [mat-dialog-close]="'DELETE'" cdkFocusInitial>Delete Player</button>
+</div>
