--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -3,6 +3,8 @@
     height: 100vh;
     max-width: 100%;
     background-image: url(../../assets/img/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,6 +15,9 @@
     img {
         position: absolute;
         width: 120px;
+        @media (max-width: 720px) {
+            width: 100px;
+        }
     }
 }
 
@@ -27,11 +32,18 @@
 .played-card {
     right: 25px;
     transform: scale(1.3) translateX(120px) translateY(-180px)rotate(-10deg);
+    @media (max-width: 720px) {
+        transform: scale(1.3) translateX(50px) translateY(-180px)rotate(-10deg);
+    }
 }
 
 .pick-card {
     animation: pick-card-animation 1s ease-in-out;
     transform: scale(1.3) translateX(120px) translateY(-180px)rotate(-10deg);
+    @media (max-width: 720px) {
+        animation: pick-card-animation-720 1s ease-in-out;
+        transform: scale(1.3) translateX(50px) translateY(-180px)rotate(-10deg);
+    }
 }
 
 @keyframes pick-card-animation {
@@ -46,6 +58,21 @@
     }
     100% {
         transform: scale(1.3) translateX(120px) translateY(-180px) rotate(-10deg);
+    }
+}
+
+@keyframes pick-card-animation-720 {
+    0% {
+        transform: scale(1);
+    }
+    30% {
+        transform: scale(1.5);
+    }
+    50% {
+        transform: scale(1.5);
+    }
+    100% {
+        transform: scale(1.3) translateX(50px) translateY(-180px) rotate(-10deg);
     }
 }
 
@@ -92,4 +119,27 @@ app-player-mobile {
     &:hover {
         filter: brightness(1.15);
     }
+}
+
+.game-over-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../../assets/img/background.jpg);
+    width: 100vw;
+    height: 100vh;
+    img {
+        width: 500px;
+    }
+}
+
+.game-over {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.preloadimg {
+    opacity: 0;
+    z-index: -999;
 }
