--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,4 +1,5 @@
 .player {
+    overflow: hidden;
     width: 300px;
     display: flex;
     align-items: center;
@@ -10,8 +11,8 @@
     }
     background-color: rgb(97, 97, 97);
     img {
-        width: 70px;
-        height: 70px;
+        width: 60px;
+        height: 60px;
         object-fit: cover;
         border-radius: 100%;
     }
